dist/calibre/Namespace.calibre.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/name: calibre
  name: calibre
  namespace: calibre
