dist/calibre/Deployment.calibre.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: calibre
  name: calibre
  namespace: calibre
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: calibre-app-calibre-app-deployment-c89715e4
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: calibre
        cdk8s.io/metadata.addr: calibre-app-calibre-app-deployment-c89715e4
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: TZ
              value: America/Chicago
            - name: PUID
              value: "8675309"
            - name: PGID
              value: "8675309"
            - name: UMASK_SET
              value: "022"
          image: lscr.io/linuxserver/calibre
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 8080
          name: calibre
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 8081
              name: webserver
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            tcpSocket:
              port: 8080
          resources:
            limits:
              memory: 3072Mi
            requests:
              cpu: 50m
              memory: 1024Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 10
            periodSeconds: 5
            tcpSocket:
              port: 8080
          volumeMounts:
            - mountPath: /config
              name: pvc-config
            - mountPath: /books
              name: pvc-nfs-books
            - mountPath: /dev/shm
              name: dshm
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-config
          persistentVolumeClaim:
            claimName: config
            readOnly: false
        - name: pvc-nfs-books
          persistentVolumeClaim:
            claimName: nfs-books
            readOnly: false
        - emptyDir:
            medium: Memory
            sizeLimit: 1024Mi
          name: dshm
