dist/calibre/Service.calibre.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre
  namespace: calibre
spec:
  externalIPs: []
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: webserver
      port: 8081
      targetPort: 8081
  selector:
    cdk8s.io/metadata.addr: calibre-app-calibre-app-deployment-c89715e4
  type: ClusterIP
